footer section added

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 
   </main>
 
-  <main class="container mx-auto">
+  <main class="container mx-auto h-[1150px] lg:h-[920px]">
     <!-- Everyday low price -->
     <section class="mx-3 mb-8">
       <h3 class="text-2xl lg:text-4xl adlam-font mb-6">Everday low price</h3>
@@ -301,26 +301,52 @@
       </div>
 
     </section>
-
-    <!-- News section -->
-    <section class="flex flex-col lg:flex-row bg-header-bg-color items-center  lg:gap-40 rounded-lg  mx-3 mb-10 ">
-      <div class="lg:ml-20 mb-5 lg:mb-20"><img class="lg:h-[420px]" src="c1-assets/cute-pet-small.png" alt=""></div>
-      <div class="flex flex-col items-center lg:items-start">
-        <h3 class="text-xl lg:text-4xl adlam-font">Get Pawsome News!</h3>
-        <p class="text-sm lg:text-xl  my-2 text-center">Exclusive training tips, ticks, product deals and more.</p>
-
-        <input class="block border rounded-sm w-[94%] border-gray-100 py-3 pl-3 pr-40 mb-3" type="email" name="" id=""
-          placeholder="Enter email...">
-
-        <button class="btn bg-header-color mb-3">Subscribe</button>
-      </div>
-    </section>
   </main>
+   
+  <main class="container mx auto absolute z-10 top-[3080px] lg:top-[2620px] lg:left-[118px]">
+       <!-- News section -->
+       <section class="flex flex-col lg:flex-row bg-header-bg-color items-center  lg:gap-40 rounded-lg  mx-3 mb-10">
+        <div class="lg:ml-20 mb-5 lg:mb-20"><img class="lg:h-[420px]" src="c1-assets/cute-pet-small.png" alt=""></div>
+        <div class="flex flex-col items-center lg:items-start">
+          <h3 class="text-xl lg:text-4xl adlam-font">Get Pawsome News!</h3>
+          <p class="text-sm lg:text-xl  my-2 text-center">Exclusive training tips, ticks, product deals and more.</p>
+  
+          <input class="block border rounded-sm w-[94%] border-gray-100 py-3 pl-3 pr-40 mb-3" type="email" name="" id=""
+            placeholder="Enter email...">
+  
+          <button class="btn bg-header-color mb-3">Subscribe</button>
+        </div>
+      </section>
+  </main>
+<!-- footer section -->
+  <footer class="bg-browse-color pt-80
+  pb-5 lg:pb-20 relative pl-3">
+   <section class="container flex flex-col lg:flex-row gap-10 mx-auto mb-10 lg:flex lg:justify-between ">
+     <!-- logo section -->
+     <div>
+      <div class="flex gap-2">
 
+        <img class="w-8 mr-1" src="c1-assets/logo-footer.png" alt="">
+        <h3 class="text-2xl ">Browses<span class="text-header-color">4</span>Pets</h3>
+      </div>
+      <p class="mt-3">Discover a world of treats, toys, and <br> essentials handpicked for your furry friends</p>
+    </div>
 
+    <div>
+      <p>Find a pet</p>
+      <p class="my-2" >Breeds</p>
+      <p>Contact us</p>
+      
+    </div>
+    <div class="lg:mt-9">
+      <p>Follow Us</p>
+      <img src="c1-assets/Group 9168social.png" alt="">
+      <div>
 
-
-  <footer></footer>
+      </div>
+    </div>
+   </section>
+  </footer>
 
 </body>
 
