--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <!-- banner section -->
     <div class="mb-[50px] px-2 relative h-[400px] md:h-[600px] lg:h-[740px]">
       <div class="z-50 relative">
-        <h1 class="text-3xl lg:text-6xl adlam-font">Pamper Your Pet,<br> Because They Deserve <br> the Best</h1>
+        <h1 class="text-3xl lg:text-6xl adlam-font animate-bounce">Pamper Your Pet,<br> Because They Deserve <br> the Best</h1>
         <p class="my-3">Discover a world of treats, toys, and essentials handpicked for your <br> furry friends. Shop
           now and make tails wag with joy!</p>
         <button class="btn bg-header-color px-6">Find a pet</button>
@@ -288,7 +288,7 @@
         </div>
         <!-- card 2 -->
         <div class="flex bg-gradient-to-r from-grad3 to-grad4
-              rounded-lg px-5 py-4">
+              rounded-lg pl-5 py-4">
           <div class="my-4">
             <h3 class="lg:text-3xl text-xl text-nowrap adlam-font">T-Shirt for Dogs</h3>
             <h3 class="text-3xl lg:text5xl text-header-color adlam-font">$7.99</h3>
@@ -303,9 +303,9 @@
     </section>
   </main>
    
-  <main class="container mx auto absolute z-10 top-[3080px] lg:top-[2620px] lg:left-[118px]">
+  <main class="container mx-auto absolute z-10 top-[3120px] lg:top-[2620px] ">
        <!-- News section -->
-       <section class="flex flex-col lg:flex-row bg-header-bg-color items-center  lg:gap-40 rounded-lg  mx-3 mb-10">
+       <section class="flex  flex-col lg:flex-row bg-header-bg-color items-center  lg:gap-40 rounded-lg mx-3 lg:ml-[120px]  lg:w-[98%]  mb-10">
         <div class="lg:ml-20 mb-5 lg:mb-20"><img class="lg:h-[420px]" src="c1-assets/cute-pet-small.png" alt=""></div>
         <div class="flex flex-col items-center lg:items-start">
           <h3 class="text-xl lg:text-4xl adlam-font">Get Pawsome News!</h3>
@@ -320,7 +320,7 @@
   </main>
 <!-- footer section -->
   <footer class="bg-browse-color pt-80
-  pb-5 lg:pb-20 relative pl-3">
+  pb-5 lg:pb-20 relative pl-3 lg:pr-3">
    <section class="container flex flex-col lg:flex-row gap-10 mx-auto mb-10 lg:flex lg:justify-between ">
      <!-- logo section -->
      <div>
